--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
         </div>
     </header>
 
+    <br> <br>
+
     <div id="content" class="container">
          <section class="main-content">
              <h1>Portfolio</h1>
@@ -49,6 +51,12 @@
             </div>
          </section>
     </div>
+
+    <footer>
+        <div class="container">
+            Copyright &copy;
+        </div>
+    </footer>
             
 </body>
 </html>
